# alert-distributor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  private_key.pem
.github/workflows/: deploy.yml
src/: main.rs
src/config/: mod.rs
src/db/: postgres.rs
src/errors/: mod.rs
src/kafka/: consumer.rs
src/logging/: mod.rs
src/models/: alert_event.rs  mod.rs
src/permissions/: cache.rs  loader.rs
src/sns/: client.rs  db_update.rs  dispatcher.rs  metrics.rs  mod.rs  models.rs  publisher.rs
src/websocket/: auth.rs  dispatcher.rs  handler.rs  mod.rs  registry.rs
